# Hackathon_IMT_3A

./: .env  .gitignore  Procfile  README.md  docker-compose.yml  package.json
.github/workflows/: deploy.yml
client/: index.js
docs/: architecture.drawio
server/: Procfile  index.py
service/api_calls/: crontab_sample  cultureData.py  db.py  googleData.py  horaires.py  jobData.py  majDB.py  requirements.txt  restaurant.py  restaurantData.py  spectacleData.py
service/auth/: Cargo.toml  Dockerfile  README.md
service/auth/src/: auth_handler.rs  email_service.rs  errors.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  schema.rs
service/backend/: .env  Dockerfile  cultureData.py  dataset.csv  dataset.json  db.py  dummy.json  dummy_restaurant.json  index.py  item.py  majDB.py  requirements.txt
service/backend/docs/: swagger_activity.yml  swagger_activity_distance.yml  swagger_activity_tags_distance.yml  swagger_agenda.yml  swagger_agenda_distance.yml  swagger_agenda_tags_distance.yml  swagger_home.yml  swagger_restaurant.yml  swagger_restaurant_distance.yml  swagger_restaurant_tags_distance.yml  swagger_tags.yml
service/chat/: Dockerfile  requirements.txt
service/chat/db/: chat.json
service/chat/src/: main.py  models.py
service/frontend/: Dockerfile  package.json  svelte.config.js  tailwind.config.cjs
service/inventory/: Cargo.toml  Dockerfile  README.md
service/nginx/: Dockerfile  default.conf  nginx-certbot.env
service/user/: Cargo.toml  user-api.json
service/user/data/: users.json
service/user/src/: main.rs
(+51 files in other folders)
